// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test post card view Should view post card (canEdit is false) 1`] = `
<DocumentFragment>
  <article
    class="post-card column"
  >
    <div
      class="wave-box"
    >
      <div
        class="wave-box__bg"
      />
      <div
        class="wave-box__effect"
      >
        <div
          class="wave-box__item"
        >
          <img
            alt="wave1"
            src="wave1.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave2"
            src="wave2.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave3"
            src="wave1.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave4"
            src="wave2.png"
          />
        </div>
      </div>
    </div>
    <div
      class="post-description"
    >
      <div
        class="column column_jc-sb"
      >
        <h3
          class="post-description__title"
        >
          Test title
        </h3>
        <p
          class="post-description__text"
        >
          test description
        </p>
        <ul
          class="tags"
        >
          <div
            class="row row_jc-fs row_ai-c row_w-w"
          >
            <li
              class="tag"
            >
              React
            </li>
            <li
              class="tag"
            >
              JS
            </li>
            <li
              class="tag"
            >
              NODEJS
            </li>
          </div>
        </ul>
        <div
          class="post-card__bottom"
        >
          <div
            class="row row_jc-sb row_ai-c row_w-w"
          >
            <button
              class="button default-button primary-button"
            >
              Read
            </button>
            <time
              class="date"
            >
              25.04.2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Test post card view Should view post card (canEdit is true) 1`] = `
<DocumentFragment>
  <article
    class="post-card column"
  >
    <div
      class="wave-box"
    >
      <div
        class="wave-box__bg"
      />
      <div
        class="wave-box__effect"
      >
        <div
          class="wave-box__item"
        >
          <img
            alt="wave1"
            src="wave1.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave2"
            src="wave2.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave3"
            src="wave1.png"
          />
        </div>
        <div
          class="wave-box__item"
        >
          <img
            alt="wave4"
            src="wave2.png"
          />
        </div>
      </div>
    </div>
    <div
      class="post-description"
    >
      <div
        class="column column_jc-sb"
      >
        <h3
          class="post-description__title"
        >
          Test title
        </h3>
        <p
          class="post-description__text"
        >
          test description
        </p>
        <ul
          class="tags"
        >
          <div
            class="row row_jc-fs row_ai-c row_w-w"
          >
            <li
              class="tag"
            >
              React
            </li>
            <li
              class="tag"
            >
              JS
            </li>
            <li
              class="tag"
            >
              NODEJS
            </li>
          </div>
        </ul>
        <div
          class="post-card__bottom"
        >
          <div
            class="row row_jc-sb row_ai-c row_w-w"
          >
            <div
              class="row   "
            >
              <button
                class="button default-button primary-button"
              >
                Change
              </button>
              <button
                class="button default-button danger-button"
              >
                Delete
              </button>
            </div>
            <time
              class="date"
            >
              25.04.2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
